fully tested register feature
