# backend/src/server/routing/routes/auth.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
 import AuthController from "../../controllers/authController";
+import AuthMiddleware from "../../lib/middlewares/authMiddleware";
 
 const auth = Router();
 
@@ -8,5 +9,17 @@ auth.post("/login", (req, res) => res.sendStatus(200));
 auth.post("/register", (req, res) => AuthController.login(req, res));
 
 auth.get("/session", (req, res) => res.sendStatus(200));
+
+auth.delete(
+  "/session",
+  (req, res, next) => AuthMiddleware.protectUser(req, res, next),
+  (req, res) => res.sendStatus(200)
+);
+
+auth.delete(
+  "/account",
+  (req, res, next) => AuthMiddleware.protectUser(req, res, next),
+  (req, res) => res.sendStatus(200)
+);
 
 export default auth;
